fixed z-index

--- a/less/blocks.less
+++ b/less/blocks.less
@@ -56,7 +56,7 @@
         &.open {
           width: 100%;
           overflow: inherit;
-          z-index: 1;
+          z-index: 2;
 
           ul {
             opacity: 1;
